# COMPLETED_PISCINE_C

./: LICENSE  README.md  a.out  chrome.html  ft_door.h  ft_fight.h  ft_perso.h  ft_stock_par.h  git_commit.md  test copy.c  test.c
Exam_C/: .swp  0-0--maff_alpha.c  0-0-aff_a.c  0-0-ft_print_numbers.c  0-0-maff_alpha.c  0-0-maff_revalpha.c  0-0____aff_a.c  0-0____ft_countdown.c  0-0____ft_print_numbers.c  0-0____hello.c  0-0____maff_alpha.c  0-0____maff_revalpha.c  0-1--aff_first_param.c  0-1--aff_last_param.c  0-1--only_z.c  0-1-only_z.c  0-1____aff_first_param.c  0-1____aff_last_param.c  0-1____only_a.c  0-1____only_z.c  0-2-aff_z.c  0-2____aff_z.c  1-0--ft_strcpy.c  1-0--ft_strlen.c  1-0--repeat_alpha.c  1-0--search_and_replace.c  1-0--ulstr.c  1-0-ft_strlen.c  1-0-repeat_alpha.c  1-0-rotone.c  1-0-search_and_replace.c  1-0-ulstr.c  1-0____ft_strcpy.c  1-0____ft_strlen.c  1-0____ft_swap.c  1-0____repeat_alpha.c  1-0____search_and_replace.c  1-0____ulstr.c  1-1--fizzbuzz.c  1-1--rot_13.c  (+162 more)
Rush00/: test.c
Rush00(rectangle_x_y)/: test.c
Rush00_(rectangle_x_y)/: test.c
Rush01(skyscrapers)/: README.txt
Rush01_(skyscrapers)/: README.md
Task_Completed___School_42Subjects__________School_42/: LICENSE  add.c  add.h  (+2 more)
old_subjects_(now_not_supported)/proj02_(EvalExpr)/v6.0/: CMakeLists.txt  bf.c
old_subjects_(now_not_supported)/proj02_(EvalExpr)/v6.0/ex00/: Makefile
old_subjects_(now_not_supported)/proj02_(EvalExpr)/v6.0/ex00/include/: eval_expr.h
old_subjects_(now_not_supported)/proj02_(EvalExpr)/v6.0/ex00/src/: eval_expr.c  ft_putchar.c  ft_putnbr.c  main.c
(+2063 files in other folders)
